--- a/src/components/layout/SiteRibbon.astro
+++ b/src/components/layout/SiteRibbon.astro
@@ -1,16 +1,9 @@
 ---
-import ExternalLink from '~/components/ui/ExternalLink.astro';
+
 ---
 
 <aside
 	class="breakout focus-ring-light min-h-10 items-center justify-center text-balance bg-theme-base-900 px-4 py-2 text-center text-sm text-theme-base-300"
 >
-	<p class="content">
-		The OFFICIAL Forces Network Global direct memmers and the <ExternalLink
-			href="https://https://forcesnetworkglobal.org/"
-			class="inline-block text-theme-base-200 underline underline-offset-2 hover:no-underline"
-		>
-			affiliated members
-		</ExternalLink>
-	</p>
+	<p class="content">Buy everything including a house !</p>
 </aside>
