--- a/src/components/LandingHero.astro
+++ b/src/components/LandingHero.astro
@@ -25,12 +25,12 @@ import { button } from '~/styles.ts';
 	<div
 		class="content relative text-4xl font-extrabold drop-shadow-md md:text-5xl md:leading-[50px]"
 	>
-		<h1 class="max-w-sm">Time to shelter up your loved ones with InstantHomes, Preengineered houses.</h1>
+		<h1 class="max-w-sm">Pre-Engineered Homes e-Shop, & other Goods</h1>
 	</div>
 	<div class="relative">
 		<button
 			class={button({ theme: 'light', className: 'font-bold md:h-12 md:text-lg' })}
-			onclick="scrollIntoView('#products')">Order now</button
+			onclick="scrollIntoView('#prefab Homes')">Shop now</button
 		>
 	</div>
 </header>
