--- a/src/components/layout/SiteFooter.astro
+++ b/src/components/layout/SiteFooter.astro
@@ -1,11 +1,15 @@
 ---
 import { Icon } from 'astro-icon/components';
 import ExternalLink from '~/components/ui/ExternalLink.astro';
+import { simpleDateNow } from '~/lib/util.ts';
 import SocialIconLink from './SocialIconLink.astro';
 
 export interface Props {
 	class?: string;
+	additionalInfoTags?: string[];
 }
+
+const buildDate = simpleDateNow();
 ---
 
 <footer class={Astro.props.class}>
@@ -37,19 +41,21 @@ export interface Props {
 			</li>
 		</ul>
 		<ul class="flex flex-wrap gap-2" aria-label="Social links">
-		
+			<li>
+				<SocialIconLink name="Discord" icon="discord" href="https://" />
+			</li>
 			<li>
 				<SocialIconLink
 					name="YouTube"
 					icon="youtube"
-					href="https://www.youtube.com/@instanthome"
+					href="https://www.youtube.com/"
 				/>
 			</li>
 			<li>
 				<SocialIconLink
 					name="X / Twitter"
 					icon="twitter"
-					href="https://twitter.com/instanthome"
+					href="https://twitter.com/"
 				/>
 			</li>
 			
@@ -59,11 +65,8 @@ export interface Props {
 	<div class="border-b border-theme-base-300"></div>
 
 	<section class="flex flex-wrap justify-between gap-y-2 py-6 text-sm text-theme-base-600">
-		<p>
-			{'© 2024 | '}
-			<ExternalLink href="https://satialimited.com/" target="_blank" rel="noopener noreferrer">
-				{'Powered by Satialimited.com'}
-			</ExternalLink><span>{' | All Rights Reserved.'}</span>
+	
+
 			<p class="flex flex-wrap gap-x-4">
 				<ExternalLink href="https://satialimited.com/static/privacy-notice.html" target="_blank" rel="noopener noreferrer">
 					Privacy Policy
