--- a/src/features/collection/CollectionSection.astro
+++ b/src/features/collection/CollectionSection.astro
@@ -12,7 +12,7 @@ const collectionsResponse = await getCollections();
 const collections = collectionsResponse.data?.items ?? [];
 
 const HEADING_ID = 'collection-section-heading';
-const { heading = 'Order by category' } = Astro.props;
+const { heading = 'Shop by category' } = Astro.props;
 ---
 
 <PageSection aria-labelledby={HEADING_ID}>
