--- a/src/pages/500.astro
+++ b/src/pages/500.astro
@@ -5,7 +5,7 @@ import PrimaryLayout from '~/layouts/PrimaryLayout.astro';
 export const prerender = true;
 ---
 
-<PrimaryLayout title="Astro Shop">
+<PrimaryLayout title="e-Shop">
 	<main>
 		<div class="mx-auto my-16 grid max-w-lg lg:my-48">
 			<h1 class="mb-6 text-3xl font-semibold sm:text-5xl">Unexpected issue ⚠</h1>
